static file issues solved in production

--- a/web.config
+++ b/web.config
@@ -1,42 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <configuration>
-
   <system.webServer>
-
-    <!-- REQUIRED: allow Django/WhiteNoise to handle static files -->
-    <modules runAllManagedModulesForAllRequests="true" />
-
     <handlers>
       <add name="DjangoHandler" path="*" verb="*" modules="FastCgiModule"
            scriptProcessor="C:\Users\Administrator\AppData\Local\Programs\Python\Python312\python.exe|C:\Users\Administrator\AppData\Local\Programs\Python\Python312\Lib\site-packages\wfastcgi.py"
            resourceType="Unspecified" />
     </handlers>
-
-    <!-- Optional but recommended: add missing MIME types for static files -->
-    <staticContent>
-      <mimeMap fileExtension=".css" mimeType="text/css" />
-      <mimeMap fileExtension=".js" mimeType="application/javascript" />
-      <mimeMap fileExtension=".json" mimeType="application/json" />
-      <mimeMap fileExtension=".woff" mimeType="font/woff" />
-      <mimeMap fileExtension=".woff2" mimeType="font/woff2" />
-      <mimeMap fileExtension=".svg" mimeType="image/svg+xml" />
-      <mimeMap fileExtension=".map" mimeType="application/octet-stream" />
-    </staticContent>
-
-    <!-- Disable IIS compression to avoid conflict with WhiteNoise -->
-    <urlCompression doStaticCompression="false" doDynamicCompression="false" />
-
   </system.webServer>
-
   <appSettings>
-    <!-- Must point to the Django project folder -->
+    <!-- PYTHONPATH should include the directory containing the project -->
     <add key="PYTHONPATH" value="C:\inetpub\wwwroot\All-Auto-Mailing" />
-
-    <!-- WSGI entry point -->
+    
+    <!-- Point to Django's WSGI handler -->
     <add key="WSGI_HANDLER" value="automation.wsgi.application" />
 
-    <!-- Optional if not set elsewhere -->
-    <add key="DJANGO_SETTINGS_MODULE" value="automation.settings" />
-  </appSettings>
-
+    <!-- Optional: set DJANGO_SETTINGS_MODULE if needed explicitly -->
+  </appSettings> 
 </configuration>
